--- a/.github/workflows/deploy-state.yml
+++ b/.github/workflows/deploy-state.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-
+---
 name: Deployment State Machine (Reusable)
 
 on:
@@ -40,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 2  # 変更検出のため
+          fetch-depth: 2
 
       - name: デプロイ可否判定
         id: decision
@@ -53,7 +53,6 @@ jobs:
               echo "reason=手動トリガー" >> $GITHUB_OUTPUT
               ;;
             "scheduled")
-              # 前回コミットからの変更をチェック
               if [ "${{ inputs.force }}" == "true" ]; then
                 echo "should-deploy=true" >> $GITHUB_OUTPUT
                 echo "reason=強制デプロイ" >> $GITHUB_OUTPUT
@@ -66,7 +65,6 @@ jobs:
               fi
               ;;
             "auto")
-              # mainブランチのみ
               if [ "${{ github.ref }}" == "refs/heads/main" ]; then
                 echo "should-deploy=true" >> $GITHUB_OUTPUT
                 echo "reason=mainブランチへのpush" >> $GITHUB_OUTPUT
@@ -96,15 +94,19 @@ jobs:
     name: 品質ゲート
     needs: validate
     if: needs.validate.outputs.should-deploy == 'true' && !inputs.skip-quality-check
-    uses: ./.github/workflows/quality-strategy.yml
-    with:
-      strategy: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-workspace
+
+      - name: 品質ゲート実行
+        run: npm run quality:check
 
   # State 3: Build
   build:
     name: ビルド
     needs: [validate, quality-gate]
-    if: needs.validate.outputs.should-deploy == 'true' && !cancelled()
+    if: ${{ needs.validate.result == 'success' && needs.validate.outputs.should-deploy == 'true' && (needs.quality-gate.result == 'success' || needs.quality-gate.result == 'skipped') && !cancelled() }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -125,9 +127,7 @@ jobs:
   deploy:
     name: GitHub Pagesへデプロイ
     needs: build
-    if: |
-      (inputs.state == 'safe' && github.event_name == 'workflow_dispatch') ||
-      (inputs.state != 'safe')
+    if: ${{ (inputs.state == 'safe' && github.event_name == 'workflow_dispatch') || (inputs.state != 'safe') }}
     runs-on: ubuntu-latest
     environment:
       name: github-pages
